<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.com.jonny.tareaandroid.MainActivity"

    >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:hint="@string/Nombre_ET"
        app:hintAnimationEnabled="true"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"

           />
    </android.support.design.widget.TextInputLayout>



<EditText
    android:id="@+id/FECHAEDIT"
    android:inputType="text"
    android:layout_width="match_parent"
    android:focusable="false"
    android:hint="Fecha"
    android:layout_height="wrap_content"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:hint="@string/Telefono"
        app:hintAnimationEnabled="true"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_Telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1"

            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:hint="@string/Email"
        app:hintAnimationEnabled="true"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:hint="@string/Descripcion"
        app:hintAnimationEnabled="true"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"

            />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>

    <Button
        android:id="@+id/Boton_Enviar"
        android:text="@string/botonEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:theme="@style/Botones"/>
</RelativeLayout>